====== phptidy Changelog ======

- Replace each() because of Deprecation in PHP 7.2

Version 3.1 (2018-01-02)
- Point composer directly to phptidy.php

Version 3.0 (2017-03-09)
- Works on PHP 7 now.
- Change path of temp file, which did not work on Windows

Version 2.17 (2016-11-29)
- New configuration option $keep_open_echo_tags
- Bugfix: Handle anonymous functions with whitespace between function keyword
  and opening brace
- Prevent running on PHP 7

Version 2.16 (2015-10-27)
- Bugfix: In @param doctags "object" was used instead of class name type hints
  and references and type hints were not detected when used together.
- New formatting function for adding spaces around operators (disabled by
  default)
- Don't use cache if the version of phptidy or the configuration has changed
- Use PHP in $PATH instead of /usr/bin/php

Version 2.15 (2015-09-05)
- Composer integration

Version 2.14 (2015-04-26)
- New formatting function for adding one space after an opening and before a
  closing round bracket (disabled by default)
- New option --config
- New option --quiet
- New command "-" to read code from STDIN and write formatted code to STDOUT
- New documentation file INTEGRATION
- Bugfix: No @uses tags were added to docblocks. To avoid unexpected behaviour,
  the new configuration option $add_usestags has been added and disabled by
  default.
- Tests
- Move version control from subversion to git

Version 2.13 (2014-12-29)
- Indent "else if" correctly
- Don't touch one line docblocks
- Handle empty files
- Indent square brackets for new array style
- Sort doctags

Version 2.12 (2013-12-03)
- Bugfix: Handle docblocks with content in the same line after "/**"

Version 2.11 (2013-05-07)
- Configurable diff command
- Tested on MacOS X
- Handle anonymous functions

Version 2.10 (2009-11-29)
- Bugfix: Do not touch casing of object methods named like built in functions
- Bugfix: Indenting of opening curly braces without control structure
- Allow constants as docroot variables