@@ -1,21 +1,23 @@
 <?
 
-include "hello.php";
+require "function_blank_lines.php";
 
-include 'hello.php';
+require_once 'function_docblocks.php';
 
-include ("hello.php");
+include_once ("function_return_reference.php");
 
-include DOCROOT."hello.php";
+include DOCROOT."indent.php";
 
-include $docroot . "hello.php";
+include ( $docroot . 'indent_elseif.php' );
 
-include $x."hello.php";
+include $x."include.php";
 
-include "hello".$x.".php";
+include "include".$x.".php";
 
 include $x;
 
 include($x);
 
 include ($x.".php");
+
+include "doesn't_exist";
