@@ -1,6 +1,8 @@
 ====== phptidy Changelog ======
 
 - Replace each() because of Deprecation in PHP 7.2
+- Add tests for @see tags
+- Remove not working '$GLOBALS[\'docroot\']' from configuration examples
 
 Version 3.1 (2018-01-02)
 - Point composer directly to phptidy.php
